deleted extra divs in each header block

--- a/index.html
+++ b/index.html
@@ -289,30 +289,15 @@
         </div>
     </section> <!-- </main> -->
     <section class="porfolio">
-        <div class="section-portfolio-inner">
-            <header class="header-block">
-                <div class="header-grid-box">
-                    <div class="header-grid-box-inner">
-                        <div class="header-grid-item">
-                            <div class="header-item-inner">
-                                <div class="line-after-red">
-                                    <p>
-                                        <span class="name-section">
-                                            Portfolio
-                                        </span>
-                                    </p>
-                                </div>
-                                <div class="title-block">
-                                    <p>
-                                        <span class="text-title">
-                                            Interior & Exterior Projects
-                                        </span>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
+        <div class="section-inner">
+            <header>
+                <div class="inner-header">
+                    <div class="content-header">
+                        <span id="small-text">Portfolio</span>
+                        <span id="big-text">Interior & Exterior Projects</span>
                     </div>
                 </div>
+
             </header>
             <div class="cards-portfolio">
                 <div class="box-cards-portfolio">
@@ -378,30 +363,16 @@
     </section>
     <section class="mission">
         <div class="mission-inner">
-            <header class="header-mission">
-                <div class="grid-header-mission">
-                    <div class="box-mission">
-                        <div class="grid-content-mission">
-                            <div class="inner-content-mission">
-                                <div class="line-after-red">
-                                    <p>
-                                        <span class="name-section">
-                                            Our Mission
-                                        </span>
-                                    </p>
-                                </div>
-                                <div class="title-block">
-                                    <p>
-                                        <span class="text-title-mission">
-                                            Being focused on luxury and practicality, we turn<br> <span
-                                                class="red-text">ideas</span> into <span class="red-text">life</span>.
-                                            Our
-                                            priority is to deliver<br> aesthetically pleasing and functional solutions.
-                                        </span>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
+            <header>
+                <div class="inner-header">
+                    <div class="content-header">
+                        <span id="small-text">Our Mission</span>
+                        <span class="text-title-mission">
+                            Being focused on luxury and practicality, we turn<br> <span class="red-text">ideas</span>
+                            into <span class="red-text">life</span>.
+                            Our
+                            priority is to deliver<br> aesthetically pleasing and functional solutions.
+                        </span>
                     </div>
                 </div>
             </header>
@@ -409,27 +380,11 @@
     </section>
     <section class="inspired">
         <div class="section-inner-inspired">
-            <header class="header-block">
-                <div class="header-grid-box">
-                    <div class="header-grid-box-inner">
-                        <div class="header-grid-item">
-                            <div class="portfolio-item-inner">
-                                <div class="line-after-red">
-                                    <p>
-                                        <span class="name-section">
-                                            Get Inspired
-                                        </span>
-                                    </p>
-                                </div>
-                                <div class="title-block">
-                                    <p>
-                                        <span class="text-title">
-                                            See Our Latest Works
-                                        </span>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
+            <header>
+                <div class="inner-header">
+                    <div class="content-header">
+                        <span id="small-text">Get Inspired</span>
+                        <span id="big-text">See Our Latest Works</span>
                     </div>
                 </div>
             </header>
