--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" />
+
+    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="section-after-banner.css">
     <link rel="stylesheet" href="arch.css">
     <link rel="stylesheet" href="banner-after-menu.css">
@@ -39,59 +44,30 @@
 </head>
 
 <body class="visible">
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">ARCH</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        <a class="nav-link" href="#">Services</a>
-                        <a class="nav-link" href="#">About us</a>
-                        <a class="nav-link disabled">Projects</a>
-                        <a class="nav-link disabled">Testimonialss</a>
-                        <a class="nav-link disabled">Pricing</a>
-                        <a class="nav-link disabled">Contact us.</a>
-                    </div>
-                </div>
+
+    <nav>
+        <div class="container">
+            <h1>
+                Arch
+            </h1>
+            <div class="menu">
+                <a href="#" class="is-active">Services</a>
+                <a href="#">About Us</a>
+                <a href="#">Projects</a>
+                <a href="#">Testimonials</a>
+                <a href="#">Pricing</a>
+                <a href="#">Contact us</a>
+
             </div>
-        </nav>
-    </header>
-    <section class="banner-after-menu">
-        <div class="cont-section-inner">
-            <header class="banner-sec">
-                <div class="grid-banner">
-                    <div class="grid-inner">
-                        <div class="grid-banner-inner">
-                            <div class="content-grid">
-                                <h2 class="info-text">
-                                    <span class="text-block">Architecture, Interior & Exterior Design</span>
-                                </h2>
-                                <span class="info-text-subtitle">
-                                    A dedicated team of designers and architects are here to implement your
-                                    project.
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </header>
-            <footer id="two-buttons">
-                <div class="style-but-l">
-                    <div class="btns-group-inner-l">
-                        <a href="#"><button class="button red-but">Request a quote</button></a>
-                        <a href="#"><button class="button tr-white-but">Learn more</button></a>
-                    </div>
-                </div>
-            </footer>
+
+            <button class="hamburger is-active">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
         </div>
-    </section>
-    </header>
+    </nav>
+
     <!-- <main> -->
     <section class="global-section" id="collection">
         <div class="section-inner">
@@ -935,6 +911,10 @@
     <footer>
 
     </footer>
+    <script src="js/nav.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="navbar.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
