--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <body class="visible">
 
-    <nav>
+    <!-- <nav>
         <div class="container">
             <h1>
                 Arch
@@ -66,7 +66,7 @@
                 <span></span>
             </button>
         </div>
-    </nav>
+    </nav> -->
 
     <!-- <main> -->
     <section class="global-section" id="collection">
@@ -517,16 +517,10 @@
                     </p>
                     <div class="button-banner">
                         <div class="grid-button-banner">
-                            <div class="grid-inner-button">
-                                <div class="grid-button-item">
-                                    <div class="item-inner-button">
-                                        <div class="item-group">
-                                            <div class="btns-group-inner">
-                                                <a href="#"><button class="button red-but" id="transparent-collab">Get
-                                                        in touch</button></a>
-                                            </div>
-                                        </div>
-                                    </div>
+                            <div class="item-group">
+                                <div class="btns-group-inner">
+                                    <a href="#"><button class="button red-but" id="transparent-collab">Get
+                                            in touch</button></a>
                                 </div>
                             </div>
                         </div>
@@ -550,17 +544,10 @@
                     </p>
                     <div class="button-banner">
                         <div class="grid-button-banner">
-                            <div class="grid-inner-button">
-                                <div class="grid-button-item">
-                                    <div class="item-inner-button">
-                                        <div class="item-group">
-                                            <div class="btns-group-inner">
-                                                <a href="#"><button class="button red-but"
-                                                        id="transparent-collab">Discuss a
-                                                        project</button></a>
-                                            </div>
-                                        </div>
-                                    </div>
+                            <div class="item-group">
+                                <div class="btns-group-inner">
+                                    <a href="#"><button class="button red-but" id="transparent-collab">Discuss a
+                                            project</button></a>
                                 </div>
                             </div>
                         </div>
@@ -609,8 +596,7 @@
                 <div class="column-items-team">
                     <div class="item-team">
                         <div id="inner">
-                            <div>
-                                <img id="image-item" src="img/wom.png">
+                            <div id="first-photo">
                             </div>
                         </div>
                         <div id="name-of-item">
@@ -637,8 +623,7 @@
                     </div>
                     <div class="item-team">
                         <div id="inner">
-                            <div>
-                                <img id="image-item" src="img/man.webp">
+                            <div id="second-photo">
                             </div>
                         </div>
                         <div id="name-of-item">
@@ -666,35 +651,34 @@
                     </div>
                     <div class="item-team">
                         <div id="inner">
-                            <div>
-                                <img id="image-item" src="img/wom-top.webp">
+                            <div id="third-photo"">
                             </div>
                         </div>
-                        <div id="name-of-item">
-                            <span>Kelly Shimmer</span>
-                        </div>
-                        <div id="position">
-                            <span>Chief Architect</span>
-                        </div>
-                        <div id="sub-item">
-                            <span>Kelly joined us when we broke the new ground of architecture services, along with
-                                construction management.</span>
-                        </div>
-                        <div class="social-icon-team">
-                            <div id="icon">
-                                <a href="#"><img src="img/facebook-icon-black.svg"></a>
+                        <div id=" name-of-item">
+                                <span>Kelly Shimmer</span>
                             </div>
-                            <div id="icon">
-                                <a href="#"><img src="img/instagram-icon-black.svg"></a>
+                            <div id="position">
+                                <span>Chief Architect</span>
                             </div>
-                            <div id="icon">
-                                <a href="#"><img src="img/youtube-icon-black.svg"></a>
+                            <div id="sub-item">
+                                <span>Kelly joined us when we broke the new ground of architecture services, along with
+                                    construction management.</span>
+                            </div>
+                            <div class="social-icon-team">
+                                <div id="icon">
+                                    <a href="#"><img src="img/facebook-icon-black.svg"></a>
+                                </div>
+                                <div id="icon">
+                                    <a href="#"><img src="img/instagram-icon-black.svg"></a>
+                                </div>
+                                <div id="icon">
+                                    <a href="#"><img src="img/youtube-icon-black.svg"></a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
     </section>
     <section class="block" id="testimonials">
         <header>
